import "package:flutter/material.dart";
import "package:flutter_svg/svg.dart";

class CampusAppBar extends StatelessWidget implements PreferredSizeWidget {
  static const double _height = 60;

  const CampusAppBar({super.key});

  @override
  Widget build(final BuildContext context) {
    return AppBar(
      automaticallyImplyLeading: false,
      leading: IconButton(
        key: const Key("hamburger_button"),
        onPressed: Scaffold.of(context).openDrawer,
        icon: const Icon(Icons.menu),
        color: Colors.white,
      ),
      actions: [
        Padding(
          padding: const EdgeInsets.only(right: 16.0),
          child: SvgPicture.asset("assets/images/app_logo.svg", height: 60, width: 60),
        ),
      ],
    );
  }

  @override
  Size get preferredSize => const Size.fromHeight(_height);
}
