...
    return Drawer(
      child: ListView(
        padding: EdgeInsets.zero,
        children: [
          CustomDrawerHeader(currentUser: currentUser),
          ListTile(
            key: const Key("hamburger_login_tile"),
            contentPadding: const EdgeInsets.symmetric(horizontal: 12.0),
            leading: Icon(isSignedIn ? Icons.logout_sharp : Icons.login_sharp),
            title: Text(
              isSignedIn ? "Logout" : "Login",
              style: GoogleFonts.roboto(color: AppTheme.concordiaForeground, fontSize: 18.0),
            ),
...
                );
              }
            },
          ),
          if (isSignedIn)
            ListTile(
              key: const Key("hamburger_calendar"),
              contentPadding: const EdgeInsets.symmetric(horizontal: 12.0),
              leading: const Icon(Icons.calendar_today),
              title: Text(
                "Import Google Calendar",
                style: GoogleFonts.roboto(color: AppTheme.concordiaForeground, fontSize: 18.0),
              ),
...
